# open-financial-terminal-windows

./: .gitignore  INSTALL-Windows.md  LICENSE  README.md  RELEASING.md
open-financial-terminal/backend/: .env.example  README.md  oft-backend.spec  oft-macos.spec  pyproject.toml  run_desktop.py
open-financial-terminal/backend/app/: __init__.py  commodity_provider.py  config.py  deps.py  fx_provider.py  indicators.py  main.py  rates_provider.py  secret_store.py  store.py
open-financial-terminal/backend/app/routers/: __init__.py  agent.py  algo.py  assistant.py  backtest.py  board.py  chart.py  committee.py  data_refresh.py  factor_monitor.py  ficc.py  filings.py  fundamentals.py  health.py  intents.py  lab.py  listings.py  macro.py  market.py  market_making.py  metrics.py  options.py  paper.py  (+11 more)
open-financial-terminal/backend/mcp_server/: __init__.py  server.py
open-financial-terminal/backend/qa_assistant/: ITERATIONS.md  ask.py  batch.py  cases_01.json  cases_02.json  cases_03.json  cases_bank.json  cases_bank2.json  cases_bank3.json  cases_bank4.json  cases_bank5.json  cases_bank6.json  cases_bank7.json  cases_neutral.json  cases_regress.json  restart.ps1  restart.sh
open-financial-terminal/backend/scripts/: backfill_history.py  run_committee_portfolio.py
open-financial-terminal/backend/tests/: conftest.py  test_agent_assistant.py  test_agent_code.py  test_agent_coder.py  test_agent_scenarios.py  test_algo_demo.py  test_algo_runner.py  test_assistant_agent.py  test_autopick.py  test_backtest_agent.py  test_backtest_proposals.py  test_backtest_timing.py  test_benchmark_stats.py  test_bootstrap_sharpe.py  test_chart_agent.py  test_committee_local.py  test_composite_factor.py  test_cost_sensitivity.py  test_data_refresh.py  test_depth.py  test_distribution_stats.py  test_drawdown_table.py  test_engine_modules.py  test_equity_stream.py  test_factor_catalog.py  test_factor_monitor.py  test_factor_monitor_agent.py  test_filings.py  test_fundamental_guard.py  test_ic_decay.py  test_index_benchmark.py  test_information_coefficient.py  test_integration_engine.py  test_intent_parity.py  test_lab_buy_hold.py  test_listings.py  test_llm_config.py  test_macro.py  test_market.py  test_market_data_settings.py  (+25 more)
(+202 files in other folders)
